Revision history for Dist-Zilla-Plugin-CheckExtraTests

{{$NEXT}}

0.013     2013-10-17 17:26:26 America/New_York

    [Changed]

    - [RunExtraTests] now runs xt/author ahead of xt/smoke and xt/release
      (Karen Etheridge)

0.012     2013-10-15 23:15:02 America/New_York

    [Changed]

    - 'dzil xtest' arguments now match as regex patterns for more
      flexibility

    [Fixed]

    - use all builders to build, not just the first (Karen Etheridge)

0.011     2013-02-09 20:53:59 America/New_York

    - Doc fixes (ETHER)

    - Path::Tiny fix (ETHER)

0.010     2013-02-07 23:09:15 America/New_York

    - Bump Dist::Zilla prereq to something modernish

0.009     2013-02-06 16:15:30 America/New_York

    - Swap Path::Class for Path::Tiny and Path::Class::Rule
      for Path::Iterator::Rule

0.008     2013-01-25 15:23:15 America/New_York

    - lazy loading of some dependencies (DOLMEN)

0.007     2012-05-31 12:00:29 America/New_York

    - change RunExtraTests plugin to avoid rebuilding the dist when
      it's not necessary (e.g. MakeMaker already ran the normal tests)
      (thanks, Christopher J. Madsen)

0.006     2012-05-10 23:08:11 America/New_York

    - run tests on the built dist, so that things like XS will work

    - add RunExtraTests plugin, which runs the appropriate xt tests when "dzil
      test" is run (but only with the appropriate flags).

0.005     2012-05-03 17:30:08 America/New_York

    - add 'xt' as command alias for 'xtest'

    - 'dzil xtest' now takes optional arguments that are
      treated as xt test filenames to run.  These will
      be found however deeply they are nested in xt.

0.004     2010-04-08 14:51:28 EST5EDT

    - manually set prereqs instead of using
      auto-detection to avoid a Dist::Zilla
      BUILD_REQUIRES bug

0.003     2010-04-07 14:02:34 EST5EDT

    - updated tests for Dist::Zilla 2.000+

    - switched from File::chdir to File::pushd

0.002     2010-03-23 19:28:48 EST5EDT
