@@ -1,14 +1,13 @@
 requires "App::Prove" => "3.00";
+requires "Archive::Tar" => "0";
 requires "Dist::Zilla" => "4.3";
 requires "Dist::Zilla::App" => "0";
 requires "Dist::Zilla::Role::BeforeRelease" => "0";
 requires "Dist::Zilla::Role::TestRunner" => "0";
-requires "File::Temp" => "0";
 requires "File::pushd" => "0";
 requires "Moose" => "2";
 requires "Moose::Autobox" => "0";
 requires "Path::Iterator::Rule" => "0";
-requires "Path::Tiny" => "0";
 requires "namespace::autoclean" => "0.09";
 requires "perl" => "5.006";
 requires "strict" => "0";
