@@ -2,6 +2,14 @@ Revision history for Dist-Zilla-Plugin-CheckExtraTests
 
 {{$NEXT}}
 
+    [Fixed]
+
+    - [CheckExtraTest] tests in a .build directory instead of the build
+      directory
+
+    - the 'xtest' command now uses Dist::Zilla methods to build a temporary
+      directory, which also sets the .build/latest symlink correctly
+
 0.013     2013-10-17 17:26:26 America/New_York
 
     [Changed]
